src/test/deca/context/invalid/created/multiple_definition/class.deca
// Description:
//      Multiple definition of a class
// Resultats:
//      Error Ligne 7 : Class name was already defined

class A {}
class A {}